corrected typos in FISTA

--- a/Assignments/Assignment2/Intro2MLAssignment2.ipynb
+++ b/Assignments/Assignment2/Intro2MLAssignment2.ipynb
@@ -133,12 +133,12 @@
     "##### Question 1.3 FISTA (3pts)\n",
     "\n",
     "It is possible to improve the ISTA updates by combining them with Nesterov accelerated gradient descent. The resulting update, known as FISTA can read, for a constant step size, by \n",
-    "letting $\\mathbf{y}^{(1)} = {\\boldsymbol \\beta}^{(0)}$, $\\eta^1 = 1$ and then using \n",
+    "letting $\\mathbf{y}^{(1)} = {\\boldsymbol \\beta}^{(0)}$, $\\eta^1 = 1$ and then using (for $k \\geq 1$) \n",
     "\n",
     "\\begin{align}\n",
     "\\left\\{\n",
     "\\begin{array}{l}\n",
-    "&\\boldsymbol{\\beta}^{k+1} = \\text{ISTA}(\\mathbf{y}^{k})\\\\\n",
+    "&\\boldsymbol{\\beta}^{k} = \\text{ISTA}(\\mathbf{y}^{k})\\\\\n",
     "&\\eta^{(k+1)} = \\frac{1+\\sqrt{1+4(\\eta^{(k)})^2}}{2}\\\\\n",
     "&\\mathbf{y}^{(k+1)} = \\mathbf{x}^{(k)} + \\left(\\frac{\\eta^{(k)} - 1}{\\eta^{(k+1)}}\\right)\\left({\\boldsymbol\\beta}^{(k)} - {\\boldsymbol\\beta}^{(k-1)}\\right)\\end{array}\\right.\n",
     "\\end{align}\n",
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def FISTA(X, t, eta0, beta0, lbda):\n",
+    "def FISTA(X, t, eta1, beta0, lbda):\n",
     "    \n",
     "    '''function should return the solution to the minimization of the\n",
     "    the LASSO objective ||X*beta - t||_2^2 + lambda*||beta||_1\n",
