corrected one more typo (replaced x in FISTA with beta)

--- a/Assignments/Assignment2/Intro2MLAssignment2.ipynb
+++ b/Assignments/Assignment2/Intro2MLAssignment2.ipynb
@@ -140,7 +140,7 @@
     "\\begin{array}{l}\n",
     "&\\boldsymbol{\\beta}^{k} = \\text{ISTA}(\\mathbf{y}^{k})\\\\\n",
     "&\\eta^{(k+1)} = \\frac{1+\\sqrt{1+4(\\eta^{(k)})^2}}{2}\\\\\n",
-    "&\\mathbf{y}^{(k+1)} = \\mathbf{x}^{(k)} + \\left(\\frac{\\eta^{(k)} - 1}{\\eta^{(k+1)}}\\right)\\left({\\boldsymbol\\beta}^{(k)} - {\\boldsymbol\\beta}^{(k-1)}\\right)\\end{array}\\right.\n",
+    "&\\mathbf{y}^{(k+1)} = \\mathbf{\\beta}^{(k)} + \\left(\\frac{\\eta^{(k)} - 1}{\\eta^{(k+1)}}\\right)\\left({\\boldsymbol\\beta}^{(k)} - {\\boldsymbol\\beta}^{(k-1)}\\right)\\end{array}\\right.\n",
     "\\end{align}\n",
     "\n",
     "Here $\\text{ISTA}$ denotes a __single__ ISTA update.\n",
